--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --runInBand --detectOpenHandles --forceExit",
+    "test": "jest --runInBand --coverage --detectOpenHandles --forceExit",
     "dev": "nodemon server.js"
   },
   "keywords": [],
