style: add background image

--- a/server/.env.example
+++ b/server/.env.example
@@ -2,6 +2,6 @@ PORT=3000
 GOOGLE_CLIENT_ID=yours
 GOOGLE_CLIENT_SECRET=yours
 GOOGLE_API_KEY=yours
-API_KEY=yours
+NEWS_API_KEY=yours
 JWT_SECRET=yours
 JWT_EXPIRES=yours
